<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="30dp"
    android:background="@drawable/custom_progress_bg"
    style="?attr/buttonBarStyle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/relTexto">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imgPrompt"
            android:contentDescription="@string/app_name"
            android:src="@drawable/warning_icon"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblEstimado"
            android:text="@string/estimado_a"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/imgPrompt"
            android:layout_toEndOf="@+id/imgPrompt"
            android:textStyle="bold|italic"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <controles.AutoResizeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblApellidos"
            android:text="@string/apellidos"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/imgPrompt"
            android:layout_toEndOf="@+id/imgPrompt"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_below="@+id/lblEstimado"
            android:textColor="#0021b3"/>

        <controles.AutoResizeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombres"
            android:text="@string/nombres"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/imgPrompt"
            android:layout_toEndOf="@+id/imgPrompt"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_below="@+id/lblApellidos"
            android:textColor="#0021b3"/>

        <controles.AutoResizeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPrompt"
            android:text="@string/se_cerrar_n_las_dem_s_sesiones_que_haya_iniciado_en_otros_dispositivos_desea_continuar"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/imgPrompt"
            android:layout_toEndOf="@+id/imgPrompt"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:maxLines="4"
            android:layout_below="@+id/lblNombres"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@+id/relTexto"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:id="@+id/btnNo"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"            />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/si"
            android:id="@+id/btnSi"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"/>

    </LinearLayout>
</RelativeLayout>