<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="30dp"
    android:background="@drawable/custom_progress_bg"    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/relTexto">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imgPrompt"
            android:contentDescription="@string/app_name"
            android:src="@drawable/question_icon"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"/>

        <controles.AutoResizeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPrompt"
            android:text="@string/confirmarCerrarSesion"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="gravity"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgPrompt"
            android:layout_toEndOf="@+id/imgPrompt"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:inputType="none"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@+id/relTexto"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:id="@+id/btnNo"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"            />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/si"
            android:id="@+id/btnSi"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_dark"/>

    </LinearLayout>
</RelativeLayout>